non-compatible/tests/ecc-gcp-279-firewall_allows_internet_traffic_to_ftp_port_20/placebo-red/get-compute-v1-projects-cloud-custodian-global-firewalls_1.json
{
  "headers": {
    "etag": "YQufFY0tfEtAXeIrHb86bK6kap0=/EoofyRs31rbXMnnaOGwT0awNG3c=",
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Mon, 16 Jan 2023 11:03:49 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "alt-svc": "h3=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "12809",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls?alt=json"
  },
  "body": {
    "kind": "compute#firewallList",
    "id": "projects/cloud-custodian/global/firewalls",
    "items": [
      {
        "kind": "compute#firewall",
        "id": "811025437959952249",
        "creationTimestamp": "2023-01-16T02:40:22.181-08:00",
        "name": "port-20-no-ftp-from-internet-279-red",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "0.0.0.0/0"
        ],
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "20"
            ]
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/port-20-no-ftp-from-internet-279-red"
      }
    ],
    "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls"
  }
}
